<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">



        <androidx.cardview.widget.CardView
            android:layout_width="215dp"
            android:layout_marginTop="15dp"
            android:layout_height="155dp"
            android:elevation="0dp"
            android:id="@+id/view2"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/Foto"
                android:scaleType="fitXY"
                android:layout_gravity="start"
                android:layout_width="215dp"
                android:layout_height="155dp" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:layout_marginTop="3dp"
            android:id="@+id/edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/genero"
            android:layout_marginTop="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="200dp"
        android:layout_marginBottom="6dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Ayuda"
        android:textSize="20sp" />


    <Button
        android:id="@+id/contactos"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/contactos"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="50dp">

    </Button>

    <Button
        android:id="@+id/Mails"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/Emails"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="50dp">

    </Button>

    <Button
        android:id="@+id/medicinas"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:backgroundTint="@color/secondaryDarkColor"
        android:text="@string/medicinas"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="50dp">

    </Button>

    <Button
        android:id="@+id/calendario"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/calendar"
        android:textSize="20sp"
        android:backgroundTint="@color/secondaryDarkColor"
        app:cornerRadius="50dp"/>



</LinearLayout>