<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContacto">

        <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"/>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="348dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints="@string/app_name"
                    android:background="@drawable/rounded_edit"
                    android:ems="80"
                    android:hint="@string/nombre"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp" />


                <EditText
                    android:id="@+id/edad"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="94dp"
                    android:autofillHints="@string/app_name"
                    android:background="@drawable/rounded_edit"
                    android:ems="80"
                    android:hint="@string/edad"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp" />


                <EditText
                    android:id="@+id/sexo"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="94dp"
                    android:layout_marginEnd="25dp"
                    android:autofillHints="@string/app_name"
                    android:background="@drawable/rounded_edit"
                    android:ems="10"
                    android:hint="@string/genero"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:paddingTop="8dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="8dp" />

                <ImageView
                    android:id="@+id/fotoImageView"
                    android:layout_width="153dp"
                    android:layout_height="131dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="158dp"
                    android:clickable="true"
                    android:contentDescription="@string/foto"
                    android:ems="10"
                    android:focusable="true"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />
            </RelativeLayout>

            <Button
                android:id="@+id/ConfirmarButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/secondaryDarkColor"
                android:gravity="center"
                android:text="@string/confirmar"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>