<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContacto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical" />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="404dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="32dp">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="60dp"
                    android:autofillHints="@string/app_name"
                    android:background="@drawable/rounded_edit"
                    android:ems="80"
                    android:hint="@string/nombre"
                    android:inputType="textAutoComplete"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp" />

                <EditText
                    android:id="@+id/NumeroEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/nameEditText"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="60dp"
                    android:autofillHints="@string/Numero"
                    android:background="@drawable/rounded_edit"
                    android:hint="@string/Numero"
                    android:inputType="number"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp" />

                <ImageView
                    android:id="@+id/fotoImageView"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_below="@+id/NumeroEditText"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/foto"
                    android:focusable="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/ConfirmarButton"
                    android:layout_width="240dp"
                    android:layout_height="56dp"
                    android:layout_below="@+id/fotoImageView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/secondaryDarkColor"
                    android:gravity="center"
                    android:text="@string/confirmar"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="50dp" />
            </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>